refactor(styles): move global, variables and mixins files into base folder

--- a/src/styles/locationCard.scss
+++ b/src/styles/locationCard.scss
@@ -1,6 +1,6 @@
-@use "./global";
-@use "./mixins";
-@use "./variables" as *;
+@use "./base/global";
+@use "./base/mixins";
+@use "./base/variables" as *;
 
 .locationCard {
   width: 240px;
