--- a/src/styles/locationCard.scss
+++ b/src/styles/locationCard.scss
@@ -4,7 +4,7 @@
 @use "./base/variables" as *;
 
 .locationCard {
-  box-shadow: 10px 10px 4px $color-black-transparensy;
+  box-shadow: 10px 10px 4px $color-black-transparent;
 
   @include mixins.flexCenter;
   flex-direction: column;
