--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: 800;
   margin: 0;
