style: add new color

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,6 +1,7 @@
 $color-base: #444444;
 
 $color-white: #fff;
+$color-white-light: rgba(255, 255, 255, 0.5);
 $color-white-transparent: rgba(255, 255, 255, 0.1);
 
 $color-black: #000000;
